change css and pom.xml for better readability